Small changes to the classes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,4 +11,13 @@
 <p th:text="'Country region: ' + ${country.region}" />
 <p th:text="'Country population: ' + ${country.population}" />
 </body>
+<script>
+
+    setInterval(updateCountry, 5000);
+
+    function updateCountry(){
+          window.location.reload(true);
+    }
+
+</script>
 </html>
